Template + CSS changes - Added title and reworked some colors slightly

--- a/templates/LandingPage.jinja
+++ b/templates/LandingPage.jinja
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="title">Secure Minesweeper</div>
         <input type="text" id="gameId" placeholder="Game ID" oninput="validateInput()">
         <div id="message" class="message">Game ID must be at least 5 characters long.</div>
         <button id="gameButton" disabled onclick="createOrJoinGame()">Create or Join Game</button>
