--- a/static/styles/LandingPage.css
+++ b/static/styles/LandingPage.css
@@ -9,6 +9,14 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.title {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #4f4f4f;
+    text-align: center;
+}
+
 .container {
     display: flex;
     flex-direction: column;
